Fix styling to prevent descending portions of glyphs from being cut off

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -52,7 +52,7 @@ body {
 .message-username {
   overflow: hidden;
   margin: 5px;
-  padding: 0 10px;
+  padding: 3px 10px;
 }
 
 .message-content {
